methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuebiscuit: Boolean = false
  
  for (i <-0 to 6)
  { 
    for (j <-0 to 6)
    {
      forward()
      if(estSurBiscuit()){vuebiscuit=true;}
    }   
    while (getX() !=0)
    {
      backward()
    }

    if(vuebiscuit){return true;}
    else 
    {
      right();
      forward()
      left();
    }
  }
}